# heroes-site

./: .env  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  alembic.ini  main.py  prestart.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: fb03c1db789a_init.py
backend/api/v1/auth/: security.py
backend/api/v1/auth/sessions/: repository.py  router.py  schema.py
backend/api/v1/database/: database.py
backend/api/v1/entities/admin/: repository.py  router.py  schema.py
backend/api/v1/entities/hero/: repository.py  router.py  schema.py
backend/api/v1/entities/news/: client.py  repository.py  router.py  schema.py
backend/api/v1/entities/search/: repository.py  router.py  schema.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routes/v1/: auth.py  soldier.py  v1.py
backend/app/core/: logger.py  settings.py
backend/app/descriptions/: c9f10eee-78b0-44d4-8e15-99b34c8f77e3.txt
backend/app/security/: hash.py
backend/app/utils/: utils.py
backend/database/: config.py
backend/database/models/: __init__.py  admin.py  base.py  refresh_token.py  session.py  soldier.py
backend/database/repository/: __init__.py  admin.py  refresh_token.py  repository.py  session.py  soldier.py
backend/database/schemas/: admin.py  refresh_token.py  session.py  soldier.py
backend/database/service/: __init__.py  refresh_token.py  service.py  session.py  soldier.py
backend/scheduler/: scheduler.py
backend/utils/: add_image.py
frontend/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.jsx  App.tsx  main.jsx
frontend/src/components/: Header.tsx
frontend/src/components/admin/: AdminLayout.jsx
frontend/src/components/admin/api/: client.jsx
frontend/src/components/admin/components/: AdminCard.jsx  HeroPanelCard.jsx
frontend/src/components/admin/components/Layout/: Sidebar.jsx
frontend/src/components/admin/contexts/: AuthContext.jsx
frontend/src/components/admin/pages/: Dashboard.jsx  HeroesPanel.jsx  Login.jsx
frontend/src/components/admin/routes/: ProtectedRoute.jsx
frontend/src/components/buttons/: HamburgerMenuButton.jsx  ScrollButton.jsx
frontend/src/components/cards/: ErrorCard.jsx  HeroCard.jsx  LoadingCard.jsx  NewsCard.jsx  NotFoundCard.jsx
frontend/src/components/global/: Footer.jsx  Header.jsx
frontend/src/components/main/: About.jsx  Heroes.jsx  Home.jsx  News.jsx  PublicLayout.jsx
frontend/src/components/main/items/: HeroItem.jsx  NewsItem.jsx
frontend/src/css/: Header.css  index.css
frontend/src/pages/: Home.tsx
frontend/src/styles/: dashboard.module.css  main.css
